# Hoe3D

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile.in  Hoe.sln  Hoe.vsprops  HoeSdk.nsi  Makefile.am  Makefile.in  README.md  bootstrap.sh  configure  configure.in  groups  index.html  makefile  makefile.in  params.json  project.config
Hoe3D/: CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  makefile  makefile.in
Hoe3D/Win32/: Hoe2D.vcproj  Hoe3D.sln  Hoe3D.vcproj  Hoe3D.vcxproj  Hoe3D.vcxproj.filters  Hoe3D_base.vsprops  Hoe3D_mobile_debug.vsprops  Hoe3D_win32_debug.vsprops  Hoe_base.vsprops  Hoe_debug.vsprops  Hoe_dll.vsprops  Hoe_lib.vsprops  Hoe_mobile.vsprops  Hoe_release.vsprops  Hoe_win32.vsprops
Hoe3D/include/: hoe3d.h  hoeelements.h  hoefs.h  hoeinput.h  hoeinputkeys.h  hoeinterfaces.h  hoeobject.h  hoeresources.h  hoescene.h  hoesystems.h  hoetypes.h
Hoe3D/src/: 2d.cpp  2d.h  Octree.cpp  Octree.h  QuadSurface.cpp  QuadSurface.h  StdAfx.h  Surface.cpp  Surface.h  camera.cpp  camera.h  cmdexec.cpp  cmdexec.h  config.cpp  config.h  config_asm.asm  cursor.cpp  cursor.h  filesystem.cpp  filesystem.h  freetype.cpp  freetype.h  glext.h  gridsurface.cpp  gridsurface.h  heightmap.cpp  heightmap.h  hoe.cpp  hoe.h  hoe2d.cpp  hoe2d.h  hoe2d_main.cpp  hoe3d.cpp  hoe3d.h  hoe3d_math.cpp  hoe3d_math.h  hoe3d_math.inl  hoe3d_math_def.h  hoe_font.cpp  hoe_font.h  (+138 more)
HoeCore/: CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  makefile
HoeCore/Win32/: HoeCore.vcproj  HoeCore.vcxproj  HoeCore.vcxproj.filters  HoeCoreTest.vcproj  HoeCoreTest.vcxproj  SmartDeviceBench.vcproj
HoeCore/include/: hoe_core.h  hoe_file.h  hoe_fixed.h  hoe_flex.h  hoe_log.h  hoe_math.h  hoe_math.inl  hoe_math_def.h  hoe_math_ext.h  hoe_mem.h  hoe_platform.h  hoe_stream.h  hoe_string.h  hoe_structures.h  hoe_time.h  hoe_types.h  hoe_universal.h
HoeCore/src/: StdAfx.h  const_file.cpp  expression.cpp  hoe_core.cpp  hoe_file.cpp  hoe_fixed.cpp  hoe_flex.cpp  hoe_log.cpp  hoe_math.cpp  hoe_mem.cpp  hoe_platform.cpp  hoe_stream.cpp  hoe_string.cpp  hoe_time.cpp  hoe_unicode.cpp  hoe_universal.cpp  parser_const.l  parser_const.yy.cpp  parser_struct.l  parser_struct.yy.cpp  parser_xml.l  parser_xml.yy.cpp  struct_file.cpp
HoeCore/template/: hoe_flex.h  hoe_flex.skl  hoe_flex_2.5.33.skl  hoe_flex_empty.skl
HoeCore/test/: Makefile  coretest.cpp  flex.l  heap.cpp  keylist.cpp  math.cpp  smartdev_math.cpp  string.cpp  structures.cpp  test.cpp  test.h  universal.cpp
HoeCore/tests/: coretest.cpp  heap.cpp  keylist.cpp  structures.cpp  universal.cpp
HoeEditor/: CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  makefile
HoeEditor/Win32/: HoeEditor.sln  HoeEditor.vcproj  HoeEditor.vcxproj
HoeEditor/lang/: becher.mo  becher.po  cs_CZ.mo  cs_CZ.po  textureview.mo  textureview.po
HoeEditor/resources/: compliation.xpm  new.xpm  open.xpm  project.xpm  run.xpm  save_all.xpm  texture_icon.xpm  texture_pack.xpm  wire.xpm
HoeEditor/src/: HoeEditor.rc  StdAfx.h  app.cpp  base_console.cpp  editor.cpp  engine_console.cpp  engview.cpp  fs.cpp  log.cpp  panels.cpp  properties.cpp  resources.cpp  undolist.cpp  utils.cpp
HoeGame/: CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  StdAfx.h  config_parser.l  hoe_app.cpp  hoe_app.h  hoe_baseapp.cpp  hoe_config.cpp  hoe_console.cpp  hoe_console.h  hoe_engine.cpp  hoe_engine.h  hoe_figure2d.cpp  hoe_fs.cpp  hoe_fs.h  hoe_game.h  hoe_gui.cpp  hoe_gui.h  hoe_input.cpp  hoe_inputkeys.cpp  hoe_inputkeys.h  hoe_lang.cpp  hoe_lang.h  hoe_linux.cpp  hoe_linux.h  hoe_music.cpp  hoe_music.h  hoe_resource_mgr.cpp  hoe_resource_mgr.h  hoe_scene.cpp  hoe_scene.h  hoe_settings.cpp  hoe_strategy.cpp  hoe_stratmap.cpp  hoe_timer.cpp  hoe_timer.h  hoe_utils.cpp  hoe_vars.cpp  (+9 more)
HoeGame/Win32/: HoeGame.sln  HoeGame.vcproj  HoeGame.vcxproj  HoeGame.vcxproj.filters  lua_test.vcproj
HoeGame/include/: hoe_adventure.h  hoe_ai.h  hoe_app.h  hoe_baseapp.h  hoe_benchmark.h  hoe_config.h  hoe_console.h  hoe_engine.h  hoe_figure2d.h  hoe_fs.h  hoe_game.h  hoe_gui.h  hoe_land.h  hoe_linux.h  hoe_macosx.h  hoe_mem.h  hoe_mobile.h  hoe_music.h  hoe_object.h  hoe_path.h  hoe_scene.h  hoe_settings.h  hoe_strategy.h  hoe_structfile.h  hoe_timer.h  hoe_utils.h  hoe_vars.h  hoe_view.h  hoe_win32.h  hoe_wx.h  lua_script.h
HoeGame/src/: StdAfx.h  config_parser.l  dictionary.c  dictionary.h  figurefile_parser.l  hoe_adventure.cpp  hoe_ai.cpp  hoe_app.cpp  hoe_baseapp.cpp  hoe_benchmark.cpp  hoe_config.cpp  hoe_console.cpp  hoe_engine.cpp  hoe_figure2d.cpp  hoe_fs.cpp  hoe_gui.cpp  hoe_input.cpp  hoe_inputkeys.cpp  hoe_land.cpp  hoe_lang.cpp  hoe_linux.cpp  hoe_macosx.cpp  hoe_mem.cpp  hoe_mobile.cpp  hoe_music.cpp  hoe_path.cpp  hoe_resource_mgr.cpp  hoe_scene.cpp  hoe_settings.cpp  hoe_strategy.cpp  hoe_stratmap.cpp  hoe_structfile.cpp  hoe_timer.cpp  hoe_utils.cpp  hoe_vars.cpp  hoe_view.cpp  hoe_win32.cpp  hoe_wx.cpp  iniparser.c  iniparser.h  (+5 more)
HoeGame/tests/: inc.lua  lua.cpp  test.lua
HoeResource/: CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in
HoeResource/Win32/: HoeResource.vcproj  HoeResource.vcxproj  HoeResource.vcxproj.filters
HoeResource/doc/: Readme.txt
HoeResource/include/: hoe_res.h  hoe_resfile.h  hoe_sl_parser.h
HoeResource/src/: StdAfx.h  color.cpp  fvf.cpp  hls_parser.l  hoe_codec.h  hoe_jpg.cpp  hoe_jpg.h  hoe_png.cpp  hoe_png.h  hoe_res.cpp  hoe_resfile.cpp  hsl_parser.l  resmgr.cpp  sl_parser.y
HoeTutorials/: Makefile.am  Makefile.in  makefile  tutorials.conf
HoeTutorials/Common/: Mobile_debug.vsprops  tutorial.cpp  tutorial.h
HoeTutorials/Console/: Console.vcproj  Makefile.in  console_app.cpp
HoeTutorials/FirstApp/: FirstApp.vcproj  Makefile.am  Makefile.in  first_app.cpp
HoeTutorials/Input/: Input.vcproj  Makefile.am  Makefile.in  input_app.cpp
HoeTutorials/Level/: Level.vcproj  bsp.cpp  level.cpp
HoeTutorials/Models/: Makefile.am  Makefile.in  Models.vcproj  model_app.cpp  model_app.h
HoeTutorials/Paint2D/: Makefile.am  Makefile.in  (+2 more)
Tools/: CMakeLists.txt  Makefile.am
Tutorials/: CMakeLists.txt  HoeTutorials.sln  Makefile.am
(+377 files in other folders)
