AC_INIT(configure.in)
AC_CONFIG_AUX_DIR(unix)
AM_INIT_AUTOMAKE(Hoe, 1.0)

sinclude(unix/macros/lua.m4)
sinclude(unix/macros/wxwin.m4)
sinclude(unix/macros/freetype2.m4)
sinclude(unix/macros/ogg.m4)
sinclude(unix/macros/vorbis.m4)
sinclude(unix/macros/gtk-2.0.m4)
sinclude(unix/macros/bison-i18n.m4)
sinclude(unix/macros/gettext.m4)
sinclude(unix/macros/xvid.m4)

AC_PROG_CXX
AM_PROG_CC_C_O
AC_PROG_LIBTOOL
AM_PROG_LEX
#AM_GNU_GETTEXT
#BISON_I18N

AM_PATH_GTK_2_0()
CHECK_LUA()

AC_CHECK_FT2()
XIPH_PATH_VORBIS()
XIPH_PATH_OGG()
AM_PATH_XVID

#AC_ARG_ENABLE(...)
#AC_ARG_WITH(...)

AM_OPTIONS_WXCONFIG

AM_PATH_WXCONFIG(2.8.0, wxWin=1)
if test "$wxWin" != 1; then
AC_MSG_ERROR([
      wxWidgets must be installed on your system
      but wx-config script couldn't be found.

      Please check that wx-config is in path, the directory
      where wxWidgets libraries are installed (returned by
               'wx-config --libs' command) is in LD_LIBRARY_PATH or
               equivalent variable and wxWidgets version is 2.3.4 or above.
       ])
fi
#CPPFLAGS="$CPPFLAGS $WX_CPPFLAGS"
#CXXFLAGS="$CXXFLAGS $WX_CXXFLAGS_ONLY"
#CFLAGS="$CFLAGS $WX_CFLAGS_ONLY"
#LIBS="$LIBS $WX_LIBS"

CPPFLAGS="$CXXFLAGS -mmmx -msse -D_LINUX -D_USE_OPENGL_ -ggdb3 -I../HoeCore/include"

LDFLAGS="$LDFLAGS -L/usr/X11R6/lib -L../bin"

AC_OUTPUT( Makefile HoeCore/Makefile Hoe3D/Makefile HoeGame/Makefile po/Makefile.in
          HoeEditor/Makefile 
          HoeUtils/Makefile
          HoeUtils/lib/Makefile
          HoeUtils/Hoe2DEditor/Makefile
          HoeUtils/HoeStudio/Makefile
          HoeTutorials/Makefile
          HoeTutorials/FirstApp/Makefile
          HoeTutorials/Paint2D/Makefile
          HoeTutorials/Console/Makefile
          HoeTutorials/Models/Makefile
          HoeTutorials/Input/Makefile
          HoeTutorials/Sound/Makefile
          HoeTutorials/PathFinding/Makefile )
