AUTOMAKE_OPTIONS = subdir-objects

#lib_LTLIBRARIES = ../bin/Hoe3D.so
bin_PROGRAMS = ../bin/Input


___bin_Input_CPPFLAGS = -I../../HoeCore/include -I../../HoeGame/include -I../../Hoe3D/include
___bin_Input_SOURCES = \ 
input_app.cpp \
../Common/tutorial.cpp
___bin_Input_LDADD = -L../../bin -lHoeCore -lHoeGame $(LUA_LIBS) -lXxf86vm -lXxf86dga  




