AUTOMAKE_OPTIONS = subdir-objects

#lib_LTLIBRARIES = ../bin/Hoe3D.so
bin_PROGRAMS = ../bin/Models


___bin_Models_CPPFLAGS = -I../../HoeCore/include -I../../HoeGame/include -I../../Hoe3D/include
___bin_Models_SOURCES = \ 
model_app.cpp \
../Common/tutorial.cpp
___bin_Models_LDADD = -L../../bin -lHoeCore -lHoeGame $(LUA_LIBS) -lXxf86vm -lXxf86dga  




