AUTOMAKE_OPTIONS = subdir-objects

#lib_LTLIBRARIES = ../bin/Hoe3D.so
bin_PROGRAMS = ../bin/PathFinding


___bin_PathFinding_CPPFLAGS = -I../../HoeCore/include -I../../HoeGame/include -I../../Hoe3D/include
___bin_PathFinding_SOURCES = \ 
pathfinding.cpp \
../Common/tutorial.cpp
___bin_PathFinding_LDADD = -L../../bin -lHoeCore -lHoeGame $(LUA_LIBS) -lXxf86vm -lXxf86dga  




