AUTOMAKE_OPTIONS = subdir-objects

lib_LTLIBRARIES = ../../bin/libHoeUtils.la
#bin_PROGRAMS = ../bin/Hoe3D.so

#src/config_parser.cpp: src/config_parser.l
#	flex -o src/config_parser.cpp src/config_parser.l
#src/lang_parser.cpp: src/lang_parser.l
#	flex -o src/lang_parser.cpp src/lang_parser.l

______bin_libHoeUtils_la_CPPFLAGS = -D_NOXLIB

______bin_libHoeUtils_la_SOURCES = utils.cpp

______bin_libHoeUtils_la_LDFLAGS = -static

